@@ -23,6 +23,7 @@ GDBDebuggerPage.9=(Warning: Some commands in this file may interfere with the st
 GDBDebuggerPage.10=Shared Libraries
 GDBServerDebuggerPage.0=TCP
 GDBServerDebuggerPage.1=Serial
+GDBServerDebuggerPage.10=Connection
 GDBServerDebuggerPage.2=Main
 GDBServerDebuggerPage.3=GDB debugger
 GDBServerDebuggerPage.4=&Browse...
@@ -30,7 +31,7 @@ GDBServerDebuggerPage.5=GDB Debugger
 GDBServerDebuggerPage.6=GDB command file:
 GDBServerDebuggerPage.7=B&rowse...
 GDBServerDebuggerPage.8=GDB Command File
-GDBServerDebuggerPage.9=Connection: 
+GDBServerDebuggerPage.9=Type: 
 GDBSolibBlock.0=Load shared library symbols automatically
 GDBSolibBlock.1=Stop on shared library events
 SerialPortSettingsBlock.0=Device: 
